update assets, add basic account and substrate context

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Polkadot React Template",
+  "name": "Polkadot React App Template",
   "icons": [
     {
       "src": "favicon.ico",
